--- a/sense_hat_gadget/sense_hat_gadget.ini
+++ b/sense_hat_gadget/sense_hat_gadget.ini
@@ -9,4 +9,4 @@ Alerts = 1.1
 Notifications = 1.0
 Alexa.Gadget.MusicData = 1.0 - tempo
 Alexa.Gadget.SpeechData = 1.0 - viseme
-SenseHatGadget = 1.0
+Custom.SenseHatGadget = 1.0
