Custom Interface Event Handler

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Project Scaffold using Typescript and ASK SDKv2",
   "main": "index.ts",
   "dependencies": {
+    "@types/uuid": "^3.4.4",
     "ask-sdk-core": "^2.5.1",
     "ask-sdk-model": "^1.14.0",
+    "uuid": "^3.3.2",
     "web-request": "1.0.7"
   },
   "devDependencies": {
